--- a/src/_includes/layouts/partials/featuredProjects.njk
+++ b/src/_includes/layouts/partials/featuredProjects.njk
@@ -43,10 +43,8 @@
         </article>
         <article class="splide" id="js-featured-images">
             <nav class="featured-projects__controls splide__arrows">
-                <button
-                    disabled
-                    class="splide__arrow splide__arrow--prev button button-outline button--rounded button-outline--primary
-                        featured-projects__control featured-projects__control--disabled">
+                <button class="splide__arrow splide__arrow--prev button button-outline button--rounded button-outline--primary
+                        featured-projects__control">
                     <span class="visually-hidden">Previous project</span>
                     <span class="icon icon--arrow-up"></span>
                 </button>
