--- a/src/assets/css/_block.hero.pcss
+++ b/src/assets/css/_block.hero.pcss
@@ -46,12 +46,12 @@
     }
 
     & circle {
-      animation: moveOut 10s var(--transition-easing) alternate infinite;
+      animation: a 10s var(--transition-easing) alternate infinite;
       opacity: 0.8;
 
       &:nth-child(2n) {
         transform: scale3d(0.75, 0.75, 0.75);
-        animation-name: moveIn;
+        animation-name: b;
         opacity: 0.3;
         animation-duration: 6s;
         animation-delay: 0.5s;
