--- a/src/_includes/layouts/_default/portfolio.njk
+++ b/src/_includes/layouts/_default/portfolio.njk
@@ -25,7 +25,7 @@ layout: base
                     <dt class="project-summary__title"><strong>Tech stack</strong></dt>
                     <dd class="project-summary__content">{{tech}}</dd>
                     </dl>
-                    <a href="/" class="button button--link button--primary button--rounded button--medium">View project</a>
+                    <a target="_blank" rel="noopener noreferrer" href="{{url}}" class="button button--link button--primary button--rounded button--medium">View project</a>
                 </aside>
                 </div>
         </section>
@@ -38,7 +38,7 @@ layout: base
              <a class="link link--color link--underline" title="{{prevPost.data.title}}" href="{{ prevPost.url }}"><span class="icon icon--arrow-left"></span>&nbsp;Previous project</a>
              </span>
              <span class="u-t-center">
-             <a class="button button--primary button--link button--rounded button--medium " href="/">View project</a>
+             <a target="_blank" rel="noopener noreferrer" class="button button--primary button--link button--rounded button--medium " href="{{url}}">View project</a>
                           </span>
              <span class=" u-t-right">
              <a  class="link link--color link--underline" title="{{nextPost.data.title}}" href="{{ nextPost.url }}">Next project&nbsp;<span class="icon icon--arrow-right"></span></a>
@@ -47,6 +47,7 @@ layout: base
          </footer>
 </main>
 
-<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 {% include 'layouts/partials/footer.njk' %}
+
+<script async src="https://platform.twitter.com/widgets.js"></script>
