--- a/src/_includes/layouts/partials/hero.njk
+++ b/src/_includes/layouts/partials/hero.njk
@@ -12,7 +12,7 @@
             </ul>
         </article>
         <figure class="hero__figure">
-            {% image "hero-homepage.png", "Adrian Bece portrait image", "hero__image", "eager", "sync",480, 720 %}
+            {% image "hero-homepage.png", "Adrian Bece portrait image", "hero__image", "eager", "sync",400,780 %}
             {{ '/src/assets/svg/pattern-bg.svg' | svgContents("hero__pattern") | safe }}
         </figure>
     </div>
