--- a/src/assets/css/_block.portfolio.pcss
+++ b/src/assets/css/_block.portfolio.pcss
@@ -141,8 +141,17 @@
       margin-right: calc(-1 * var(--spacing-4));
       padding: var(--spacing-2) var(--spacing-4) var(--spacing-3);
 
+      & ul {
+        margin: 0;
+      }
+
+      & li + li {
+        margin-top: var(--spacing-1);
+      }
+
       & h2 {
         font-size: var(--font-size-2);
+        margin-bottom: var(--spacing-1);
       }
     }
   }
