--- a/src/assets/css/_setup.keyframes.pcss
+++ b/src/assets/css/_setup.keyframes.pcss
@@ -1,4 +1,4 @@
-@keyframes moveOut {
+@keyframes a {
   0% {
     opacity: 0.8;
     transform: scale3d(1, 1, 1);
@@ -9,7 +9,7 @@
   }
 }
 
-@keyframes moveIn {
+@keyframes b {
   0% {
     transform: scale3d(0.75, 0.75 0.75);
     opacity: 0.3;
