--- a/src/404.njk
+++ b/src/404.njk
@@ -5,6 +5,7 @@ permalink: 404.html
 eleventyExcludeFromCollections: true
 ---
 
+  {% include 'layouts/partials/header.njk' %}
   <main>
     <div>
       <h1>Page not found</h1>
@@ -12,3 +13,4 @@ eleventyExcludeFromCollections: true
       <p>Please use the navigation menu, above, to find another&nbsp;page.</p>
     </div>
   </main>
+{% include 'layouts/partials/footer.njk' %}
