Inline all css, cleanup

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,3 +1,4 @@
+/*
 @import "_setup.keyframes.pcss";
 
 @import "_variables.media.pcss";
@@ -14,3 +15,4 @@
 @import "_block.featured.pcss";
 @import "_block.project-summary.pcss";
 @import "_block.project-card.pcss";
+*/
