--- a/src/_includes/layouts/partials/hero.njk
+++ b/src/_includes/layouts/partials/hero.njk
@@ -12,7 +12,7 @@
             </ul>
         </article>
         <figure class="hero__figure">
-            {% image "hero-homepage.png", "Adrian Bece portrait image", "hero__image", "lazy", "auto",1,780,"(min-width: 568px) 100vw, 0vw" %}
+            {% image "hero-homepage.png", "Adrian Bece portrait image", "hero__image", "eager", "auto",1,780,"(min-width: 568px) 100vw, 0vw" %}
             {{ '/src/assets/svg/pattern-bg.svg' | svgContents("hero__pattern") | safe }}
         </figure>
     </div>
