Revert test changes

--- a/src/_includes/layouts/partials/head.njk
+++ b/src/_includes/layouts/partials/head.njk
@@ -44,3 +44,4 @@
             {% include 'critical.css' %}
             {% endinlinecriticalcss %}
           </style>
+          <link rel="preload" href="/css/index.css" as="style" onload="this.onload=null;this.rel='stylesheet'"/>
