--- a/src/404.njk
+++ b/src/404.njk
@@ -6,11 +6,12 @@ eleventyExcludeFromCollections: true
 ---
 
   {% include 'layouts/partials/header.njk' %}
-  <main>
-    <div>
-      <h1>Page not found</h1>
-      <p>Sorry, that page isn&rsquo;t on this site.</p>
-      <p>Please use the navigation menu, above, to find another&nbsp;page.</p>
-    </div>
+  <main class="banner u-t-center u-container-spacing">
+    <section class="banner__container u-container u-container--large">
+      <h1>Page not found</h1><br/>
+      <p>The page you are looking for does not exist.</p>
+      <br/>
+        <a class="button button--primary button--rounded button--link button--medium"" href="/">Go back to the homepage</a>
+    </section>
   </main>
 {% include 'layouts/partials/footer.njk' %}
