--- a/src/assets/css/_block.hero.pcss
+++ b/src/assets/css/_block.hero.pcss
@@ -93,7 +93,8 @@
     @media (--screen-desktop-small) {
       right: 0;
       left: auto;
-      height: calc(100% - var(--spacing-2));
+      width: 65%;
+      height: 100%;
       margin: initial;
     }
   }
