--- a/src/assets/css/_block.project-card.pcss
+++ b/src/assets/css/_block.project-card.pcss
@@ -1,5 +1,5 @@
 .project-card {
-  transition: opacity 0.25s ease-in-out;
+  transition: opacity 0.3s 0.12s ease-in-out;
   text-align: left;
   padding: 0 var(--spacing-1);
 
