--- a/src/assets/css/_block.hero.pcss
+++ b/src/assets/css/_block.hero.pcss
@@ -32,18 +32,22 @@
     z-index: var(--level-n1);
     backface-visibility: hidden;
     transform: translateZ(0);
-    height: 75%;
+    height: 100%;
     left: calc(var(--spacing-3) * -1);
     right: calc(var(--spacing-3) * -1);
     margin-left: auto;
     margin-right: auto;
-    opacity: 0.7;
+    opacity: 0.5;
 
     & g {
       transform: scale3d(0.773, 0.773, 1);
     }
 
     @media (--screen-phone-large) {
+      height: 75%;
+    }
+
+    @media (--screen-desktop-small) {
       opacity: 1;
 
       & circle {
