Update packages and content

--- a/src/_includes/layouts/partials/footer.njk
+++ b/src/_includes/layouts/partials/footer.njk
@@ -6,7 +6,7 @@
         {% include 'layouts/partials/linkList.njk' %}
         <p class="footer__thanks">
             Special thanks to Vitaly Friedman, Chris Coyier, Henri Helvetica, Josh Comeau, Jen Simmons, Stephanie Eckles, Brad
-            Frost, Addy Osmani, Enno Stuurman, Gatsby team, Vercel team, and my Gin Coding fam for support and inspiration.
+            Frost, Addy Osmani, Enno Stuurman, Gatsby team, Andy Bell for making the Internet a better place for everyone.
         </p>
         <blockquote class="footer__quote">
             Per aspera ad astra.
