--- a/src/assets/css/_component.link.pcss
+++ b/src/assets/css/_component.link.pcss
@@ -3,6 +3,10 @@
   transition: color 0.25s var(--transition-easing);
   text-decoration: none;
 
+  &:visited {
+    color: var(--color-gray-medium);
+  }
+
   &:hover,
   &:focus {
     color: var(--color-primary);
